--- a/ptp_rus/localisation/hypo_stars_l_russian.yml
+++ b/ptp_rus/localisation/hypo_stars_l_russian.yml
@@ -1,4 +1,4 @@
-l_russian:
+﻿l_russian:
  pc_blue_dwarf_star:0 "Голубой карлик"
  pc_blue_dwarf_star_desc:1 "Когда звезда M класса - красный карлик с массой меньше, чем 0,25 Солнца, сжигает большую часть своих запасов водорода, вместо того, чтобы вырасти до красного гиганта, она становится ещё горячее, чтобы сохранить термодинамическое равновесие и превращается в голубого карлика."
  sc_blue_dwarf_star:0 "§HГолубой карлик§!"
